--- a/sudoku-fsharp/packages.config
+++ b/sudoku-fsharp/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FParsec" version="1.0.1" targetFramework="net40-Client" />
+  <package id="FSharp.Core" version="3.1.2.1" targetFramework="net40-Client" />
+  <package id="FSharpx.Collections" version="1.10.1" targetFramework="net40-Client" />
 </packages>
